* Fix long code overflowing out of card. Disadvantage though is codemirror no longer has a min size of the card height

--- a/resources/public/css/main.css
+++ b/resources/public/css/main.css
@@ -15,10 +15,24 @@
     border-radius: 2px;
 }
 
-.cm-editor-root, .cm-editor {
+.cm-card {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    gap: 4px;
+    overflow-y: auto;
     height: 100%;
 }
 
+.cm-card .cm-card-header {
+    flex-shrink: 0;
+    flex-grow: 0;
+}
+
+.cm-card .cm-editor-root {
+    flex-grow: 1;
+    overflow-y: auto;
+}
 
 .tab-panel {
     border-bottom: 1px solid #aaa;
